// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Favorites /> render should has empty favorites 1`] = `
<div
  className="favorites"
>
  <h1>
    Favorites
  </h1>
  <form
    className="add-favorite"
    onSubmit={[Function]}
  >
    <input
      className="input"
      name="cityName"
      placeholder="City name"
      required={true}
      type="text"
    />
    <input
      className="button"
      type="submit"
      value="Add to favorite"
    />
  </form>
  <div
    className="forecasts"
  />
</div>
`;

exports[`<Favorites /> render should has error 1`] = `
<div
  className="favorites"
>
  <h1>
    Favorites
  </h1>
  <form
    className="add-favorite"
    onSubmit={[Function]}
  >
    <input
      className="input"
      name="cityName"
      placeholder="City name"
      required={true}
      type="text"
    />
    <input
      className="button"
      type="submit"
      value="Add to favorite"
    />
  </form>
  <div
    className="error"
  >
    Error: 
    test error message
  </div>
  <div
    className="forecasts"
  />
</div>
`;

exports[`<Favorites /> render should has favorites with 1 element 1`] = `
<div
  className="favorites"
>
  <h1>
    Favorites
  </h1>
  <form
    className="add-favorite"
    onSubmit={[Function]}
  >
    <input
      className="input"
      name="cityName"
      placeholder="City name"
      required={true}
      type="text"
    />
    <input
      className="button"
      type="submit"
      value="Add to favorite"
    />
  </form>
  <div
    className="forecasts"
  >
    <div
      className="weather"
    >
      <div
        className="header"
      >
        <div
          className="city-name"
        >
          New York
        </div>
        <div
          className="temperature"
        >
          -22
           ℃
        </div>
        <img
          alt="Weather icon"
          src="https://openweathermap.org/img/wn/icon_code.png"
        />
      </div>
      <div
        className="param"
      >
        <div
          className="name"
        >
          Wind
        </div>
        <div
          className="value"
        >
          15 m/s
        </div>
      </div>
      <div
        className="param"
      >
        <div
          className="name"
        >
          Cloudness
        </div>
        <div
          className="value"
        >
          good to stay at home
        </div>
      </div>
      <div
        className="param"
      >
        <div
          className="name"
        >
          Pressure
        </div>
        <div
          className="value"
        >
          234 hPa
        </div>
      </div>
      <div
        className="param"
      >
        <div
          className="name"
        >
          Humidity
        </div>
        <div
          className="value"
        >
          1%
        </div>
      </div>
      <div
        className="param"
      >
        <div
          className="name"
        >
          Coords
        </div>
        <div
          className="value"
        >
          74, 89
        </div>
      </div>
      <button
        className="button"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
</div>
`;
